--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:id="@+id/recyclerView"
         android:background="#EEEEEE"
+        android:scrollbars="vertical"
         android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
